Added toggle functionality and alert animation to canvas

--- a/src/app/current-map/current-map.component.css
+++ b/src/app/current-map/current-map.component.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
-.debug-buttons {
+.debug-buttons-container {
   text-align: center;
+}
+
+.debug-buttons-container button:hover {
+  cursor: pointer;
 }
