--- a/src/app/current-map/current-map.component.html
+++ b/src/app/current-map/current-map.component.html
@@ -2,7 +2,7 @@
   <canvas id="{{mapId}}" height="600" width="600"></canvas>
 </div>
 
-<div class="debug-buttons">
+<div class="debug-buttons-container">
   <button id="sim_alert_1" (click)="toggleAlert(0)">Toggle Point 1</button>
   <button id="sim_alert_2" (click)="toggleAlert(1)">Toggle Point 2</button>
   <button id="sim_alert_3" (click)="toggleAlert(2)">Toggle Point 3</button>
