--- a/src/app/current-map/current-map.component.css
+++ b/src/app/current-map/current-map.component.css
@@ -1,7 +1,3 @@
-.map-container {
-  text-align: center;
-}
-
 .debug-buttons-container {
   text-align: center;
 }
@@ -9,3 +5,28 @@
 .debug-buttons-container button:hover {
   cursor: pointer;
 }
+
+.map-container {
+  text-align: center;
+  padding: 10px;
+}
+
+.map-points-container {
+  text-align:center;
+  width: 100%;
+}
+
+.map-points-table {
+  width: 75%;
+  margin: auto;
+  margin-bottom: 20px;
+  cursor: default;
+}
+
+.map-points-table { text-align: center; border-collapse: collapse; font-family: arial; }
+.map-points-table th { padding: 10px; background-color: #63b4cf; color: white; }
+.map-points-table td { padding: 10px; }
+.map-points-table .clear { color: green; }
+.map-points-table .alarm { color: red; }
+.map-points-table tr.odd { background-color: #b1d9e7; }
+.map-points-table tr.even { background-color: #d8ecf3; }
