Added support for robot movement simulation and updated the grid a little bit

--- a/src/app/current-map/current-map.component.css
+++ b/src/app/current-map/current-map.component.css
@@ -1,8 +1,18 @@
 .debug-buttons-container {
   text-align: center;
+  cursor: default;
 }
 
 .debug-buttons-container button:hover {
+  cursor: pointer;
+}
+
+.robot-buttons-container {
+  text-align: center;
+  padding: 10px;
+}
+
+.robot-buttons-container button:hover {
   cursor: pointer;
 }
 
