Re-wrote some of the code so it was a little bit cleaner

--- a/src/app/current-map/current-map.component.html
+++ b/src/app/current-map/current-map.component.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="map-container">
-  <canvas id="{{mapId}}" height="600" width="600"></canvas>
+  <canvas id="{{MAP_ID}}" height="600" width="600"></canvas>
 </div>
 
 <div class="map-points-container">
